--- a/src/assets/css/side-button.module.css
+++ b/src/assets/css/side-button.module.css
@@ -1,11 +1,9 @@
-#add-button {
+.side-button {
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 20px;
     z-index: 10;
-    right: 20px;
     background: #f8f8f8;
     padding: 10px 10px 8px 8px;
     border-radius: 28px;
@@ -16,7 +14,19 @@
     transition: 0.5s;
 }
 
-#add-button .material-symbols-outlined {
+.add-button {
+    top: 20px;
+    right: 20px;
+}
+
+.info-button {
+    top: 20px;
+    right: 90px;
+}
+
+
+
+.side-button span {
     display: block;
     font-size: 2.3em;
 }
