--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -52,3 +52,10 @@
     src: url('@assets/fonts/Noto_Sans_KR/NotoSansKR-ExtraBold.ttf') format('truetype');
     font-display: block;
 }
+
+@font-face {
+    font-family: 'iceJaram-Rg';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/iceJaram-Rg.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
