--- a/src/assets/css/default.css
+++ b/src/assets/css/default.css
@@ -1,3 +1,5 @@
+@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0";
+
 html, body, #root {
     width: 100%;
     height: 100%;
