--- a/src/assets/css/side-button.module.css
+++ b/src/assets/css/side-button.module.css
@@ -5,7 +5,6 @@
     position: absolute;
     z-index: 10;
     background: #f8f8f8;
-    padding: 10px 10px 8px 8px;
     border-radius: 28px;
     -webkit-box-shadow: 3px 5px 6px 0px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 3px 5px 6px 0px rgba(0, 0, 0, 0.5);
@@ -17,11 +16,14 @@
 .add-button {
     top: 20px;
     right: 20px;
+    padding: 10px 10px 8px 8px;
 }
 
 .info-button {
     top: 20px;
     right: 90px;
+    padding: 9px;
+
 }
 
 
